tests/snapshots/direct_default_features__direct_external_default_features_only_checks_direct_dependencies.snap
---
source: tests/direct_default_features.rs
expression: diags
---
[
  {
    "fields": {
      "code": "default-feature-enabled",
      "graphs": [
        {
          "Krate": {
            "name": "direct-default",
            "version": "0.1.0"
          },
          "parents": [
            {
              "Feature": {
                "crate_name": "direct-default",
                "name": "default"
              },
              "parents": [
                {
                  "Krate": {
                    "name": "direct-default-features",
                    "version": "0.1.0"
                  }
                }
              ]
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 37,
          "line": 1,
          "message": "lint level",
          "span": "deny"
        }
      ],
      "message": "'default' feature enabled for crate 'direct-default = 0.1.0'",
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
